<resources>
  <string name="app_name">AppPortfolio</string>

  <string name="main_title">My Nanodegree Apps!</string>

  <string name="app_streamer">Spotify Streamer</string>
  <string name="app_scores">Scores App</string>
  <string name="app_library">Library App</string>
  <string name="app_bigger">Build It Bigger</string>
  <string name="app_reader">XYZ Reader</string>
  <string name="app_capstone">Capstone: My Own App</string>

  <string name="main_toast_message">This button will launch my %s</string>
</resources>
